Removed smiley from 404 page. Added resume. Added humans.txt content. Allowed robots.txt to see the site. Added a footer to the main page with links to tech used & the github repo.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -225,6 +225,21 @@ p {
   line-height: 27px;
 }
 
+footer > p {
+  font-size:12px;
+  line-height:22px;
+  color: #999;
+  text-align: center;
+}
+
+footer > p > a:link {
+  color: #999;
+}
+
+footer > p > a:hover {
+  color: #555;
+}
+
 li {
   font-size: 16px;
   margin-bottom:16px;
