Added a title to the page. Added some extra css to make the links in the footer remain grey even when they are clicked.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -236,6 +236,14 @@ footer > p > a:link {
   color: #999;
 }
 
+footer > p > a:visited {
+  color: #999;
+}
+
+footer > p > a:hover {
+  color: #555;
+}
+
 footer > p > a:hover {
   color: #555;
 }
